--- a/index.html
+++ b/index.html
@@ -1,47 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>ACare - Login</title>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/82fa732971.js" crossorigin="anonymous"></script>
+
+        <title>BetterPrints </title>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="assets/css/sample.css"/> -->
     </head>
     <body>
-        <img class="wave" src="assets/img/wave.png">
-        <div class="container">
-            <div class="img">
-                <img src="assets/img/bg.svg">
-            </div>
-            <div class="login-content">
-                <form action="index.html">
-                    <img src="assets/img/avatar.svg">
-                    <h2 class="title">Welcome</h2>
-                       <div class="input-div one">
-                          <div class="i">
-                                  <i class="fas fa-user"></i>
-                          </div>
-                          <div class="div">
-                                  <h5>Username</h5>
-                                  <input type="text" class="input">
-                          </div>
-                       </div>
-                       <div class="input-div pass">
-                          <div class="i"> 
-                               <i class="fas fa-lock"></i>
-                          </div>
-                          <div class="div">
-                               <h5>Password</h5>
-                               <input type="password" class="input">
-                       </div>
-                    </div>
-                    <a href="#">Forgot Password?</a>
-                    <input type="submit" class="btn" value="Login">
-                </form>
+        <!-- START CODE HERE -->
+        <h1>Hello, World</h1>
+        <style>
+            [class*="col"]{
+                padding: 1rem;
+                background-color: #33b5e5;
+                border: 2px solid #fff;
+                color: #fff;
+            }
+            </style>
+
+        <div class="container-md border">
+            <div class="row">
+                <div class="col">Col1</div>
+                <div class="col">Col2</div>
+                <div class="col">Col3</div>
+                <div class="col">Col4</div>
+                <div class="col">Col5</div>
             </div>
         </div>
-        <script type="text/javascript" src="assets/js/main.js"></script>
+
+        <!-- END CODE HERE -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+        <!-- <script src="assets/js/boostrap.js"></script> -->
     </body>
-    </html>
+</html>
